.vendor/dislin/examples/ch/dislin.h

void  abs3pt (double x, double y, double z, double *xp, double *yp);
void  addlab (const char *cstr, double v, int itic, const char *cax);
void  angle  (int ngrad);
void  arcell (int nx, int ny, int na, int nb, double a, double b, double t);
void  areaf  (const int *nxray, const int *nyray, int n);
void  autres (int ixdim, int iydim);
void  autres3d (int ixdim, int iydim, int izdim);
void  ax2grf (void);
void  ax3len (int nxl, int nyl, int nzl);
void  axclrs (int nclr, const char *copt, const char *cax);
void  axends (const char *cstr, const char *cax);
void  axgit  (void);
void  axis3d (double x3, double y3, double z3);
void  axsbgd (int nclr);
void  axsers (void);
void  axslen (int nxl, int nyl);
void  axsorg (int nxa, int nya);
void  axspos (int nxa, int nya);
void  axsscl (const char *cscl, const char *cax);
void  axstyp (const char *copt);
void  barbor (int iclr);
void  barclr (int ic1, int ic2, int ic3);
void  bargrp (int ngrp, double gap);
void  barmod (const char *cmod, const char *copt);
void  baropt (double xf, double a);
void  barpos (const char *copt);
void  bars   (double *xray, double *y1ray, double *y2ray, int n);
void  bars3d (const double *xray, const double *yray, const double *z1ray, 
              const double *z2ray, const double *xwray, const double *ywray,
              const int *icray, int n);
void  bartyp (const char *ctyp);
void  barwth (double factor);
void  basalf (const char *calph);
void  basdat (int id, int im, int iy);
 
void  bezier (const double *xray, const double *yray, int nray, 
              double *x, double *y, int n);
void  bfcclr (int ic);
void  bfcmsh (int ic);
short bitsi2 (int nbits, short mher, int iher, short mhin, int ihin);
int   bitsi4 (int nbits, int mher,int iher, int mhin, int ihin);
void  bmpfnt (const char *copt);
void  bmpmod (int n, const char *cval, const char *copt);
void  box2d  (void);
void  box3d  (void);
void  bufmod (const char *cmod, const char *ckey);
void  center (void);
void  cgmbgd (double xr, double xg, double xb);
void  cgmpic (const char *cstr);
void  chaang (double angle);
void  chacod (const char *copt);
void  chaspc (double xspc);
void  chawth (double xwth);
void  chnatt (void);
void  chncrv (const char *copt);
void  chndot (void);
void  chndsh (void);
void  chnbar (const char *copt);
void  chnpie (const char *copt);
void  circ3p (double x1, double y1, double x2, double y2, double x3, double y3,
              double *xm, double *ym, double *r);
void  circle (int nx, int ny, int nr);
void  circsp (int nspc);
void  clip3d (const char *ctyp);
int   closfl (int nu);
 
void  clpbor (const char *copt);
void  clpmod (const char *copt);
void  clpwin (int nx, int ny, int nw, int nh);
void  clrcyc (int index, int iclr);
void  clrmod (const char *cmode);
void  clswin (int id);
void  color  (const char *col);
void  colran (int nca, int nce);
void  colray (const double *zray, int *nray, int n);
void  complx (void);
void  conclr (const int *nray, int n);
void  concrv (const double *xray, const double *yray, int n, double zlev);
void  cone3d (double xm, double ym, double zm, double r, 
              double h1, double h2, int nsk1, int nsk2);
 
void  confll (const double *xray, const double *yray, const double *zray,
              int n, const int *i1ray, const int *i2ray, const int *i3ray,
              int ntri, const double *zlev, int nlev);
void  congap (double xfac);
void  conlab (const char *clab);
void  conmat (const double *zmat, int n, int m, double zlev);
void  conmod (double xfac, double xquot);
void  conn3d (double x, double y, double z);
void  connpt (double x, double y);