.vendor/dislin/julia/Dislin.jl

# /****************************************************************/
# /**                        DISLIN.JL                           **/
# /**                                                            **/
# /** Module file of DISLIN for Julia.                           **/
# /**                                                            **/
# /** Date     : 15.03.2024                                      **/
# /** Functions: 800                                             **/
# /** Version  : 11.5.2, 64-bit                                  **/
# /****************************************************************/

module Dislin

function abs3pt(x1::Float64, x2::Float64, x3::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  ccall((:axs3pt, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, x3, xp1, xp2)
  return xp1[1], xp2[1]
end

function addlab(s1::String, x::Float64, i::Int64, s2::String)
  ccall((:aaddlab, "libdislin_d.so"), Cvoid, 
           (Ptr{UInt8}, Float64, Int32, Ptr{UInt8}), s1, x, i, s2)
end

function angle(i::Int64)
  ccall((:angle, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function arcell(i1::Int64, i2::Int64, i3::Int64, i4::Int64, x1::Float64,
                x2::Float64, x3::Float64)
  ccall((:arcell, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32,
           Float64, Float64, Float64), i1, i2, i3, i4, x1, x2, x3)
end

function areaf(ixray::Vector{Int32}, iyray::Vector{Int32}, n::Int64)
  ccall((:areaf, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Int32), ixray, iyray, n)
end

function autres(i1::Int64, i2::Int64)
  ccall((:autres, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function autres3d(i1::Int64, i2::Int64, i3::Int64)
  ccall((:autres3d, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), i1, i2, i3)
end

function ax2grf()
  ccall((:ax2grf, "libdislin_d.so"), Cvoid, ())
end

function ax3len(i1::Int64, i2::Int64, i3::Int64)
  ccall((:ax3len, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), i1, i2, i3)
end

function axclrs(i::Int64, s1::String, s2::String)
  ccall((:axclrs, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}, Ptr{UInt8}), 
           i, s1, s2)
end

function axends(s1::String, s2::String)
  ccall((:axends, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function axgit()
  ccall((:axgit, "libdislin_d.so"), Cvoid, ())
end

function axis3d(x1::Float64, x2::Float64, x3::Float64)
  ccall((:axis3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function axsbgd(i::Int64)
  ccall((:axsbgd, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function axsers()
  ccall((:axsres, "libdislin_d.so"), Cvoid, ())
end

function axslen(i1::Int64, i2::Int64)
  ccall((:axslen, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function axsorg(i1::Int64, i2::Int64)
  ccall((:axsorg, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function axspos(i1::Int64, i2::Int64)
  ccall((:axspos, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function axsscl(s1::String, s2::String)
  ccall((:axsscl, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function axstyp(s::String)
  ccall((:axstyp, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function barbor(i::Int64)
  ccall((:barbor, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function barclr(i1::Int64, i2::Int64, i3::Int64)
  ccall((:barclr, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), i1, i2, i3)
end

function bargrp(i::Int64, x::Float64)
  ccall((:bargrp, "libdislin_d.so"), Cvoid, (Int32, Float64), i, x)
end

function barmod(s1::String, s2::String)
  ccall((:barmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function baropt(x1::Float64, x2::Float64)
  ccall((:baropt, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function barpos(s::String)
  ccall((:barpos, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function bars(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64)
  ccall((:bars, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32), xray, yray, zray, n)
end

function bars3d(xray::Vector{Float64}, yray::Vector{Float64}, 
                z1ray::Vector{Float64}, z2ray::Vector{Float64},
                xwray::Vector{Float64}, ywray::Vector{Float64},
                icray::Vector{Int32}, n::Int64)
  ccall((:bars3d, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Ptr{Float64},
          Ptr{Int32}, Int32), xray, yray, z1ray, z2ray, xwray, ywray, icray, n)
end

function bartyp(s::String)
  ccall((:bartyp, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function barwth(x::Float64)
  ccall((:barwth, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function basalf(s::String)
  ccall((:basalf, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function basdat(i1::Int64, i2::Int64, i3::Int64)
  ccall((:basdat, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), i1, i2, i3)
end

function bezier(xray::Vector{Float64}, yray::Vector{Float64}, nray::Int64,
                x::Vector{Float64},y::Vector{Float64}, n::Int64)
  ccall((:bezier, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, Int32,
          Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, nray, x, y, n)
end

function bfcclr(i::Int64)
  ccall((:bfcclr, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function bfcmsh(i::Int64)
  ccall((:bfcmsh, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function bitsi2(i1::Int64, i2::Int16, i3::Int64, i4::Int16, i5::Int64)
  n = ccall((:bitsi2, "libdislin_d.so"), Int16, 
              (Int32, Int16, Int32, Int16, Int32), i1, i2, i3, i4, i5)
  return n
end

function bitsi4(i1::Int64, i2::Int32, i3::Int64, i4::Int32, i5::Int64)
  n = ccall((:bitsi2, "libdislin_d.so"), Int32, 
              (Int32, Int32, Int32, Int32, Int32), i1, i2, i3, i4, i5)
  return n
end

function bmpfnt(s::String)
  ccall((:bmpfnt, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function bmpmod(i::Int64, s1::String, s2::String)
  ccall((:bmpmod, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}, Ptr{UInt8}), 
           i, s1, s2)
end

function box2d()
  ccall((:box2d, "libdislin_d.so"), Cvoid, ())
end

function box3d()
  ccall((:box3d, "libdislin_d.so"), Cvoid, ())
end

function bufmod(s1::String, s2::String)
  ccall((:bufmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function center()
  ccall((:center, "libdislin_d.so"), Cvoid, ())
end

function cgmbgd(x1::Float64, x2::Float64, x3::Float64)
  ccall((:cgmbgd, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function cgmpic(s::String)
  ccall((:cgmpic, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function cmgver(i::Int64)
  ccall((:cmgver, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function chaang(x::Float64)
  ccall((:chaang, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function chacod(s::String)
  ccall((:chacod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function chaspc(x::Float64)
  ccall((:chaspc, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function chawth(x::Float64)
  ccall((:chawth, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function chnatt()
  ccall((:chnatt, "libdislin_d.so"), Cvoid, ())
end

function chncrv(s::String)
  ccall((:chncrv, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function chndot()
  ccall((:chndot, "libdislin_d.so"), Cvoid, ())
end

function chndsh()
  ccall((:chndsh, "libdislin_d.so"), Cvoid, ())
end

function chnbar(s::String)
  ccall((:chnbar, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function chnpie(s::String)
  ccall((:chnpie, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function circ3p(x1::Float64, x2::Float64, x3::Float64, 
                x4::Float64, x5::Float64, x6::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  xp3 = Cdouble[0]
  ccall((:circ3p, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}),
          x1, x2, x3, x4, x5, x6, xp1, xp2, xp3)
  return xp1[1], xp2[1], xp3[1] 
end

function circle(i1::Int64, i2::Int64, i3::Int64)
  ccall((:circle, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32), i1, i2, i3)
end

function circsp(i::Int64)
  ccall((:circsp, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function clip3d(s::String)
  ccall((:clip3d, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function closfl(i::Int64)
  n = ccall((:closfl, "libdislin_d.so"), Int32, (Int32, ), i)
  return convert(Int64, n)
end

function clpbor(s::String)
  ccall((:clpbor, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function clpmod(s::String)
  ccall((:clpmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function clpwin(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:clpwin, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function clrcyc(i1::Int64, i2::Int64)
  ccall((:clrcyc, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function clrmod(s::String)
  ccall((:clrmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function clswin(i::Int64)
  ccall((:clswin, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function color(s::String)
  ccall((:color, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function colran(i1::Int64, i2::Int64)
  ccall((:colran, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function conray(zray::Vector{Float64}, nray::Vector{Int32}, n::Int64)
  ccall((:colray, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Ptr{Int32}, Int32), zray, nray, n)
end

function complx()
  ccall((:complx, "libdislin_d.so"), Cvoid, ())
end

function conclr(nray::Vector{Int32}, n::Int64)
  ccall((:conclr, "libdislin_d.so"), Cvoid, (Ptr{Int32}, Int32), nray, n)
end

function concrv(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
                zlev::Float64)
  ccall((:concrv, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Ptr{Float64}, Int32, Float64), xray, yray, n, zlev)
end

function cone3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
           x5::Float64, x6::Float64, i1::Int64, i2::Int64)
  ccall((:cone3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Int32, Int32), 
          x1, x2, x3, x4, x5, x6, i1, i2)
end
 
function confll(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64, i1ray::Vector{Int32}, 
                i2ray::Vector{Int32}, i3ray::Vector{Int32}, ntri::Int64,
                zlev::Vector{Float64}, nlev::Int64)
  ccall((:confll, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32,
          Ptr{Float64}, Int32), xray, yray, zray, n, i1ray, i2ray, i3ray,
          ntri, zlev, nlev)
end

function congap(x::Float64)
  ccall((:congap, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function conlab(s::String)
  ccall((:conlab, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function conmat(zmat::Array{Float64, 2}, n::Int64, m::Int64, zlev::Float64)
  z = transpose(zmat)
  ccall((:conmat, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Int32, 
          Float64), z, n, m, zlev)
  z = 0  # free z
end

function conmod(x1::Float64, x2::Float64)
  ccall((:conmod, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function conn3d(x1::Float64, x2::Float64, x3::Float64)
  ccall((:conn3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function connpt(x1::Float64, x2::Float64)
  ccall((:connpt, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end
